# Yakka

./: .clang-format  .gitignore  README.md  inja_test.cpp  inja_test.yakka  yakka-components.json  yakka-projects.json
.github/instructions/: yakka.instructions.md
.github/workflows/: c-cpp.yml
components/blake3/: blake3.yakka
components/cryptopp/: cryptopp.yakka
components/ryml-schema-validator/: CMakeLists.txt
components/ryml-schema-validator/src/: array-schema.cpp  number-schema.cpp  object-schema.cpp  ryml-schema-combinators.cpp  ryml-schema-combinators.hpp  ryml-schema.hpp  string-schema.cpp  validator.cpp
docs/: component_database.md  structure.md  task_engine.md  templating.md
test/: circular_blueprints.yakka  inja_test.cpp  inja_test.yakka  test_data.json  test_data.toml  test_data.yaml  workspace_unit_tests.cpp
yakka/: blueprint_commands.cpp  blueprint_commands.hpp  blueprint_database.cpp  blueprint_database.hpp  component_database.cpp  component_database.hpp  slcc_schema.hpp  target_database.cpp  target_database.hpp  task_engine.cpp  task_engine.hpp  template_engine.cpp  tests.cpp  utilities.cpp  utilities.hpp  yakka.hpp  yakka.yakka  yakka_blueprint.cpp  yakka_blueprint.hpp  yakka_cli.cpp  yakka_cli.yakka  yakka_cli_actions.cpp  yakka_cli_actions.hpp  yakka_component.cpp  yakka_component.hpp  yakka_config.cpp  yakka_config.hpp  yakka_project.cpp  yakka_project.hpp  yakka_schema.cpp  yakka_schema.hpp  yakka_schema.yaml  yakka_test.cpp  yakka_version.h  yakka_workspace.cpp  yakka_workspace.hpp
yakka-config/: server.cpp  yakka-config.yakka
(+86 files in other folders)
